Update selected all

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -180,3 +180,11 @@ li {
 .d-none {
   display: none;
 }
+.my-5 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.my-10 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
