--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -74,7 +74,7 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
+  color: #222222;
   background: var(--color-background);
   transition:
     color 0.5s,
